Increased body top margin to avoid overlap for smaller screen size.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,14 +30,11 @@ h1, h2 {
         width:100%;
     }
 
-    /* #navNameContainer{
-
-        justify-content: center;
-        width:100%;
-        margin-left:0;
-        margin-right:0;
-
-    } */
+    #navNameContainer{
+        /* justify-content: center;
+        width:100%; */
+        margin:0 auto;
+    }
 
     #nameContainer{
         margin-left:0;
@@ -46,11 +43,16 @@ h1, h2 {
     }
     #nameBg {
       width:100%;
-      margin:0;
+      margin:0 auto;
       text-align:center;
     }
 
     .navbar{
         margin:0 auto;
     }
+
+    body{
+        margin-top:80px;
+    }
+
 }
